--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Books</title>
     <link rel="style.css" href="style.css">
+
 </head>
 <body>
     <header class="cabeçalho">
-        <span calss="cabeçalho__menu-haburguer"></span>
-        <img src="img/Logo.svg" alt="Logo Da AluraBooks">
-        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-        <a href="#"><img src="img/Usuario.png" alt="Meu Perfil"></a>
+        <div class="container">
+            <span calss="cabeçalho__menu-haburguer"></span>
+            <img src="img/Logo.svg" alt="Logo Da AluraBooks">
+        </div>
+            <div class="container">
+                <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+                <a href="#"><img src="img/Favoritos.svg" alt="carrinho de compras"></a>
+                <a href="#"><img src="img/Usuario.png" alt="Meu Perfil"></a>
+            </div>
+    </header>
 </body>
 </html>
