--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Books</title>
     <link rel="style.css" href="style.css">
-
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
     <header class="cabeçalho">
         <div class="container">
-            <span calss="cabeçalho__menu-haburguer"></span>
-            <img src="img/Logo.svg" alt="Logo Da AluraBooks">
+            <span calss="cabeçalho__menu-haburguer"> <img src="./Menu.svg"></span>
+            <img src="./Polygon 1 (Stroke).png" alt="Logo Da AluraBooks">
         </div>
             <div class="container">
-                <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-                <a href="#"><img src="img/Favoritos.svg" alt="carrinho de compras"></a>
-                <a href="#"><img src="img/Usuario.png" alt="Meu Perfil"></a>
+                <a href="#"> <img src="./Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+                <a href="#"><img src="./Sacola.png" alt="carrinho de compras" class="container__imagem"></a>
+                <a href="#"><img src="./Usuario.png" alt="Meu Perfil" class="container__imagem"></a>
             </div>
     </header>
 </body>
