--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alura Books</title>
-    <link rel="style.css" href="style.css">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="./style/header.css">
-
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AluraBooks</title>
+        <link rel="stylesheet" href="style/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./style/header.css">
+        <link rel="stylesheet" href="./style/reset.css">
+        <link rel="stylesheet" href="./style/baner.css">
+        <link rel="stylesheet" href="./style/carrosel.css">
+        </head>
 <body>
     <header class="cabeçalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
             <label for="menu">
-             <span calss="cabeçalho__menu-haburguer"> <img src="./Menu.svg"></span>
+             <span calss="cabeçalho__menu-haburguer">
             </label>
             <ul class="lista-menu">
                 <li class="lista-menu__titulo">Categorias</li>
@@ -43,7 +47,6 @@
             </div>
     </header>
     <section class=”banner”>
-
         <h2 class=”banner__titulo”>Já sabe por onde começar?</h2>
         <p class=”banner__texto”>Encontre em nossa
         estante o que precisa para seu desenvolvimento!</p>
@@ -53,5 +56,7 @@
     <section class=”carrossel”>
         <h2 class=”carrossel__titulo”>Novos lançamentos</h2>
     </section>
+    <script src=”https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js”>
+    </script>
 </body>
 </html>
